feat: Add m10c theme submodule and configure Hugo site

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,5 @@
-baseURL = 'https://example.org/'
+baseURL = "https://halon176.github.io/blog-hugo/"
 languageCode = 'en-us'
 title = 'My New Hugo Site'
+
+theme = "m10c"
